--- a/styles/board.css
+++ b/styles/board.css
@@ -1,111 +1,114 @@
 .gridContainerChildBoard {
-    /* background-color: red; */
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 35px;
+  /* background-color: red; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 35px;
 }
 
 .paddingRight50Px {
-    padding-right: 50px;
+  padding-right: 50px;
 }
 
 .addTaskBoardBtn {
-    background-color: rgba(42,54,71,255);
-    border-radius: 8px;
-    color: white;
+  background-color: rgba(42, 54, 71, 255);
+  border-radius: 8px;
+  color: white;
 }
 
 .findTaskBtn {
-    background-color: white;
-    border-radius: 8px;
+  background-color: white;
+  border-radius: 8px;
 }
 
 .inputfindTask {
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 }
 
 ::placeholder {
-    color: #D1D1D1;
+  color: #d1d1d1;
 }
 
 .cursorPointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .textWhite {
-    color: white;
+  color: white;
 }
 
 .boxShadow {
-    box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
+  box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
 }
 
 .height40Px {
-    height: 40px;
+  height: 40px;
 }
 
-#todo, #inProgress, #awaitingFeedback, #done {
-    border: 2px dashed lightgrey;
-    min-height: 100%;
-    max-height: 100%;
-    /* overflow-y:scroll; */
+#todo,
+#inProgress,
+#awaitingFeedback,
+#done {
+  border: 2px dashed lightgrey;
+  min-height: 100%;
+  max-height: 100%;
+  /* overflow-y:scroll; */
 }
 
 .bgWhite2 {
-    background-color: white;
+  background-color: white;
 }
 
 .heightWidth45Px {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .popUpBoardBackground {
-    position: absolute;
-    top: 0;
-    height: 100vh;
-    width: 100%;
-    background-color: rgb(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(0, 0, 0, 0.2);
 }
 
 .popUpBoardTask {
-    position:relative;
-    min-height: 100px;
-    min-width: 400px;
-    background-color: white;
+  position: relative;
+  min-height: 100px;
+  min-width: 400px;
+  background-color: white;
 }
 
 .boardTaskClose {
-    position: absolute;
-    top: 25px;
-    right: 25px;
+  position: absolute;
+  top: 25px;
+  right: 25px;
 }
 
 .heightWidth35Px {
-    height: 35px;
-    width: 35px;
+  height: 35px;
+  width: 35px;
 }
 
 .boardTaskEdit {
-    position: absolute;
-    bottom: 25px;
-    right: 25px;
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
 }
 
 .dNone {
-    display: none !important;
+  display: none !important;
 }
 
 .height35Px {
-    height: 35px;
+  height: 35px;
 }
 
 .margin-4 {
-    margin: -4px;
+  margin: -4px;
 }
 
 .display-flex {
-    display: flex;
+  display: flex;
 }
