--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -15,31 +15,31 @@
     <nav>
       <div class="w-100 d-flex flex-column align-items-center">
         <div class="logoDiv">
-          <img src="../img/logo.svg" alt="JOIN" />
+          <img src="./img/logo.svg" alt="JOIN" />
         </div>
 
         <div class="navChild w-100">
           <div class="ps-5">
             <a href="summary.html" class="link d-flex align-items-center">
-              <img src="../img/summary.svg" alt="summary" />
+              <img src="./img/summary.svg" alt="summary" />
               <div class="link-text">Summary</div>
             </a>
           </div>
           <div class="ps-5">
             <a href="board.html" class="link d-flex align-items-center">
-              <img src="../img/board.svg" alt="board" />
+              <img src="./img/board.svg" alt="board" />
               <div class="link-text">Board</div>
             </a>
           </div>
           <div class="ps-5">
             <a href="addtask.html" class="link d-flex align-items-center">
-              <img class="w-38" src="../img/addTask.svg" alt="add task" />
+              <img class="w-38" src="./img/addTask.svg" alt="add task" />
               <div class="link-text">Add Task</div>
             </a>
           </div>
           <div class="ps-5">
             <a href="contacts.html" class="link d-flex align-items-center">
-              <img class="w-38" src="../img/contacts.svg" alt="contacts" />
+              <img class="w-38" src="./img/contacts.svg" alt="contacts" />
               <div class="link-text">Contacts</div>
             </a>
           </div>
@@ -48,7 +48,7 @@
 
       <div class="navBar-bottom">
         <div class="legalNoticeDiv">
-          <img src="../img/info.svg" alt="info" />
+          <img src="./img/info.svg" alt="info" />
           <div>Legal notice</div>
         </div>
       </div>
@@ -60,8 +60,8 @@
       </div>
       <div class="header-text">Kanban Project Management Tool</div>
       <div>
-        <img class="icon-question" src="../img/icon_question.png" alt="question" />
-        <img class="gap26px icon-user" src="../img/SM.png" alt="SM" />
+        <img class="icon-question" src="./img/icon_question.png" alt="question" />
+        <img class="gap26px icon-user" src="./img/SM.png" alt="SM" />
       </div>
     </header>
   </div>
