--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -467,13 +467,10 @@ body {
 }
 
 /* RESPONSIVE */
+
 @media screen and (min-width: 320px) and (max-width: 420px) {
   body {
     overflow: hidden;
-  }
-
-  #dialog__editContact, #dialog__createContact {
-    display: none;
   }
 
   .custom-style-contacts {
@@ -486,10 +483,15 @@ body {
     display: none;
   }
 
+  #dialog__editContact, #dialog__createContact {
+    display: none;
+  }
+
   #contactsListContainer {
     width: 100%;
+    height: 72dvh;
     overflow-y: hidden;
-    /* padding: 0; */
+    padding: 16px 0px 32px 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
