--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -468,30 +468,30 @@ body {
 
 /* RESPONSIVE */
 
+@media screen and (max-width: 796px) {
+  .display-none {
+    display: none !important;
+  }
+}
 @media screen and (min-width: 320px) and (max-width: 420px) {
   body {
     overflow: hidden;
+    font-size: 16px !important;
   }
 
   .custom-style-contacts {
-    height: 100svh;
     margin-left: 0;
-    display: grid;
   }
 
   #contactsMain {
     display: none;
   }
 
-  #dialog__editContact, #dialog__createContact {
-    display: none;
-  }
-
   #contactsListContainer {
+    width: max-content;
+    padding: 0;
     width: 100%;
-    height: 72dvh;
     overflow-y: hidden;
-    padding: 16px 0px 32px 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
