--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -91,21 +91,23 @@ header {
 @media screen and (min-width: 320px) and (max-width: 420px){
     nav {
         position: fixed;
+        padding-top: 0;
         width: 100vw;
         bottom: 0;
         left: 0;
         right: 0;
-        z-index: 1000;
-        will-change: transform;
-        transform: translateZ(0);
-        display: flex;
         height: 32px;
-        box-sizing: border-box;
     }
 
     header {
-        position: relative;
+        position: sticky;
+        top: 0;
         height: 80px;
+    }
+
+    .sidebar {
+        display: flex;
+        flex-direction: flex-start;
     }
 
     .header-text {
@@ -123,11 +125,6 @@ header {
     .icon-question {
         display: none;
     }
-
-    /* .icon-user {
-        width: 32px;
-        height: 32px;
-    } */
     
     .navChild {
         display: flex;
