--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -97,6 +97,12 @@
       </svg>
     </div>
     <div class="right">
+      <img
+        src="/img/close.svg"
+        alt="Close the Dialog Windows"
+        id="closeAddTask"
+        onclick="addTaskWindow('close');"
+      />
       <label required class="font20" for="date">Due date</label>
       <input
         id="task-date"
