--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,14 +1,15 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="../scripts/bootstrap.js"></script>
+  <script src="./scripts/bootstrap.js"></script>
   <link rel="stylesheet" href="../styles/bootstrap.css" />
   <link rel="stylesheet" href="../styles/fonts.css" />
   <link rel="stylesheet" href="../styles/style.css" />
-</head> -->
+  <link rel="stylesheet" href="../styles/styleSidebar.css">
+</head>
 
 <body>
   <div class="sidebar">
@@ -55,11 +56,12 @@
     </nav>
 
     <header>
-      <div class="resp-logo">
-        <img src="./img/logo_dark.svg" alt="">
-      </div>
+
       <div class="header-text">Kanban Project Management Tool</div>
       <div>
+        <div class="resp-logo">
+          <img src="../img/logo_dark.svg">
+        </div>
         <img class="icon-question" src="../img/icon_question.png" alt="question" />
         <img class="gap26px icon-user" src="../img/SM.png" alt="SM" />
       </div>
