added redirection and some refactoring

--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -119,6 +119,8 @@ header {
   header {
     position: relative;
     height: 80px;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .header-text {
