--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,102 +1,118 @@
 .parentDiv {
-    /* margin-top: -22px; */
-    margin-left: 232px;
-    height: calc(100vh - 91px);
-    width: calc(100% - 232px);
-    padding-top: 50px;
-    padding-left: 60px;
-    padding-bottom: 50px;
-    background-color: rgba(246,247,248,255);
-} 
+  /* margin-top: -22px; */
+  margin-left: 232px;
+  height: calc(100vh - 91px);
+  width: calc(100% - 232px);
+  padding-top: 50px;
+  padding-left: 60px;
+  padding-bottom: 50px;
+  background-color: rgba(246, 247, 248, 255);
+}
 
 .size3Em {
-    font-size: 3em;
+  font-size: 3em;
 }
 
 .size2Em {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 .size08Em {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
 .bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .borderColorBlue {
-    border-color: #29ABE2 !important;
+  border-color: #29abe2 !important;
 }
 
 .fontColorBlue {
-    color: #29ABE2;;
+  color: #29abe2;
 }
 
 .firstContainer {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 15px;
-    /* background-color: rgb(162, 162, 255); */
-    /* width: 60%; */
-    /* display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 15px;
+  /* background-color: rgb(162, 162, 255); */
+  /* width: 60%; */
+  /* display: flex;
     flex-direction: column;
     justify-content: space-around; */
-    /* margin: 60px; */
+  /* margin: 60px; */
 }
 
 .item-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 15px;
 }
 
 .item-2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    /* grid-auto-columns: max-content; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  /* grid-auto-columns: max-content; */
 }
 
 .item-3 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 15px;
 }
 
 .firstContainer img {
-    height: 60px;
+  height: 60px;
 }
 
 .secondContainer {
-    /* background-color: green; */
-    /* width: 40%; */
-    display: flex;
-    align-items: center;
+  /* background-color: green; */
+  /* width: 40%; */
+  display: flex;
+  align-items: center;
 }
 
 .childDiv {
-    height: calc(100% - 72px);
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: 1fr;
+  height: calc(100% - 72px);
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: 1fr;
 }
 
 .noWrapWords {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .bgWhite {
-    background-color: white;
-    transition: all .2s ease-in-out;
+  background-color: white;
+  transition: all 0.2s ease-in-out;
 }
 
 .bgWhite:hover {
-    cursor: pointer;
-    background-color: rgba(42,54,71,255);
-    color: white;
-    transform: scale(1.05);
+  cursor: pointer;
+  background-color: rgba(42, 54, 71, 255);
+  color: white;
+  transform: scale(1.05);
+}
+
+@media screen and (max-width: 1001px) {
+  .secondContainer {
+    display: none;
+  }
+}
+@media screen and (max-width: 825px) {
+  .headline-container {
+    flex-direction: column;
+    gap: 0;
+    align-items: flex-start !important;
+  }
+  .headline-nutshell {
+    padding: 0 !important;
+  }
 }
